[package]
name = "pay_per_read"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
mongodb = {version = "2.1.0", default-features = false, features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = { version = "0.4.6" }
dotenv_codegen = "0.15.0"
rand = "0.8.4"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
time = "0.1.37"
